[form-builder] PTE: fix blockExtras overlay z-index

--- a/packages/@sanity/form-builder/src/inputs/PortableText/BlockExtras.css
+++ b/packages/@sanity/form-builder/src/inputs/PortableText/BlockExtras.css
@@ -7,7 +7,7 @@
   position: relative;
   overflow: hidden;
   font-size: var(--font-size-xsmall);
-  z-index: 0;
+  z-index: var(--zindex-portal);
 }
 
 .content {
